Se realizaron correciones en el wigdet de lo q dice la gente y correciones del articulo de opinion

--- a/index.html
+++ b/index.html
@@ -427,23 +427,30 @@
 						<h6 class="text-white font-s-19"><i class="icon icon-bubbles"></i> Lo que dice la gente</h6>
 					</div>
 					<ul class="collection">
+						
 					    <li class="collection-item">
-					    	<i class="icon-quotes-left"></i> Camaron que se duerme se lo lleva la corriente <i class="icon-quotes-right"></i>
+					    	<h6><i class="icon-quotes-left"></i> Antes me comía cuatro o cinco arepas, ahora ni una, madre venezolana <i class="icon-quotes-right"></i></h6>
+ 							<cite>Madre Venezolana</cite>
 					    </li>
 					    <li class="collection-item">
-					    	<i class="icon-quotes-left"></i> Eramos poco y pario la abuela <i class="icon-quotes-right"></i>
+					    	<h6><i class="icon-quotes-left"></i> Yo nunca me iba a imaginar que mi nevera estaría tan vacía <i class="icon-quotes-right"></i></h6>
+					    	<cite>Una señora en el metro de Mameras</cite>
 					    </li>
 					    <li class="collection-item">
-					    	<i class="icon-quotes-left"></i> Primero fue sabado que domingo <i class="icon-quotes-right"></i>
+					    	<h6><i class="icon-quotes-left"></i> Uno sabe si come hoy, pero no mañana <i class="icon-quotes-right"></i></h6>
+					    	<cite>Pasajero en un autobus</cite>
 					    </li>
 					    <li class="collection-item">
-					    	<i class="icon-quotes-left"></i> ¿Vistes el nuevo chinazo de maduro en cadena nacional? <i class="icon-quotes-right"></i>
+					    	<h6><i class="icon-quotes-left"></i> Mi hijo buscó en internet y él mismo hizo su desodorante <i class="icon-quotes-right"></i></h6>
+					    	<cite>Decía una señor en una cola</cite>
 					    </li>
 					    <li class="collection-item">
-					    	<i class="icon-quotes-left"></i> Que fastidio con los bachaqueros <i class="icon-quotes-right"></i>
+					    	<h6><i class="icon-quotes-left"></i> De todo quieren culpar al gobierno <i class="icon-quotes-right"></i><br></h6>
+					    	<cite>Señaló una señora de unos 60 años que compraba pan en la panadería</cite>
 					    </li>
 					    <li class="collection-item">
-					    	<i class="icon-quotes-left"></i> Los bachaqueros no merecen ser llamados venezolanos <i class="icon-quotes-right"></i>
+					    	<h6><i class="icon-quotes-left"></i> Los bachaqueros no merecen ser llamados venezolanos <i class="icon-quotes-right"></i></h6>
+					    	<cite>Decía una señora en una cola</cite>
 					    </li>
 				    </ul>
 				</wigdet>
@@ -454,7 +461,7 @@
 					</div>
 					<ul class="collapsible" data-collapsible="accordion">
 						<li>
-						    <div class="collapsible-header grey darken-3 text-white active">
+						    <div class="collapsible-header grey darken-3 text-white">
 								<i class="icon icon-happy"></i>Humor					    	
 						    </div>
 						    <div class="collapsible-body">
