Se justifico los parrafos

--- a/que-sucedio-el-1ero-de-septiembre.html
+++ b/que-sucedio-el-1ero-de-septiembre.html
@@ -232,7 +232,7 @@
 					</div>
 					<ul class="collection">
 					   <li class="collection-item">
-					    	<h6><i class="icon-quotes-left"></i> Antes me comía cuatro o cinco arepas, ahora ni una, madre venezolana <i class="icon-quotes-right"></i></h6>
+					    	<h6><i class="icon-quotes-left"></i> Antes me comía cuatro o cinco arepas, ahora ni una <i class="icon-quotes-right"></i></h6>
  							<cite>Madre Venezolana</cite>
 					    </li>
 					    <li class="collection-item">
