--- a/index.html
+++ b/index.html
@@ -151,6 +151,24 @@
 
 				<div class="slider hoverable">
 				    <ul class="slides">
+				    	<li>
+				        	<a href="capriles-decreto-crisis-alimentaria.html">
+				        	<img src="imagenes/capriles.jpg"> <!-- random image -->
+				        	<div class="caption center-align fondoTextoSlider">
+				          		<h3>En el estado Miranda decretaron Crisis Alimentaria</h3>
+				          		<h5 class="light grey-text text-lighten-3">Capriles reveló que 17,2% de las personas se alimentan de la basura.</h5>
+				        	</div>
+				        	</a>
+				      	</li>
+				      	<li>
+				        	<a href="que-sucedio-el-1ero-de-septiembre.html">
+				        	<img src="imagenes/slider6.jpg"> <!-- random image -->
+				        	<div class="caption center-align fondoTextoSlider">
+				          		<h3>¿Qué se logró este 1 de septiembre?</h3>
+				          		<h5 class="light grey-text text-lighten-3">Caracas fue un desierto atípico por la cantidad de gente en sus principales avenidas y arterias viales.</h5>
+				        	</div>
+				        	</a>
+				      	</li>				      	
 				      	<li>
 				        	<a href="que-sucedio-el-1ero-de-septiembre.html">
 				        	<img src="imagenes/slider6.jpg"> <!-- random image -->
