Se agrego nuevo articulo en contexto noticias

--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
 				        	</a>
 				      	</li>
 				      	<li>
-				        	<a href="que-sucedio-el-1ero-de-septiembre.html">
-				        	<img src="imagenes/slider6.jpg"> <!-- random image -->
+				        	<a href="venezolanos-se-alimentan-de-basura.html">
+				        	<img src="imagenes/venezolanoscomenbasura.jpg"> <!-- random image -->
 				        	<div class="caption center-align fondoTextoSlider">
-				          		<h3>¿Qué se logró este 1 de septiembre?</h3>
-				          		<h5 class="light grey-text text-lighten-3">Caracas fue un desierto atípico por la cantidad de gente en sus principales avenidas y arterias viales.</h5>
+				          		<h3>Más de 4 millones 800 mil venezolanos se alimentan de desperdicios</h3>
+				          		<h5 class="light grey-text text-lighten-3">More Consulting asegura que 53,9% se ha acostado a dormir sin comer</h5>
 				        	</div>
 				        	</a>
 				      	</li>				      	
