Se modifico el nombre de la foto de capriles

--- a/capriles-decreto-crisis-alimentaria.html
+++ b/capriles-decreto-crisis-alimentaria.html
@@ -161,7 +161,7 @@
 				<ul class="collection hoverable">
 
 					<div class="titulo_articulo"><h3 class="titulo_articulo">​En el estado Miranda decretaron Crisis Alimentaria ​</h3></div>
-					<img class="responsive-img" src="imagenes/capriles.jpg">
+					<img class="responsive-img" src="imagenes/capriless.jpg">
 					<!-- <p class="subtitulo_articulo"><b>"Concentración en las afueras de Parque Cristal" | Foto: Daniela Moros | 02/09/2016</b></p> -->
 					<p class="subtitulo_articulo"><b>Lic Daniela Moros | <a href="https://twitter.com/danii_moros?ref_src=twsrc%5Etfw" class="icon-twitter" target="_blank">@Danii_moros</a></b></p>	
 					<div class="articulos">			
