--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 				    <ul class="slides">
 				    	<li>
 				        	<a href="capriles-decreto-crisis-alimentaria.html">
-				        	<img src="imagenes/capriles.jpg"> <!-- random image -->
+				        	<img src="imagenes/capriless.jpg"> <!-- random image -->
 				        	<div class="caption center-align fondoTextoSlider">
 				          		<h3>En el estado Miranda decretaron Crisis Alimentaria</h3>
 				          		<h5 class="light grey-text text-lighten-3">Capriles reveló que 17,2% de las personas se alimentan de la basura.</h5>
