se agrego nuevo articulo en la categoria de contexto

--- a/index.html
+++ b/index.html
@@ -152,6 +152,15 @@
 				<div class="slider hoverable">
 				    <ul class="slides">
 				    	<li>
+				        	<a href="contaminacion-del-agua-en-venezuela.html">
+				        	<img src="imagenes/aguaturbia1.jpg"> <!-- random image -->
+				        	<div class="caption center-align fondoTextoSlider">
+				          		<h3>Contaminación del agua en Venezuela es tan grande que plantas potabilizadoras no pueden tratarla</h3>
+				          		<h5 class="light grey-text text-lighten-3">Mal estado del vital líquido intensifica afecciones de riñón y cáncer</h5>
+				        	</div>
+				        	</a>
+				      	</li>
+				    	<li>
 				        	<a href="capriles-decreto-crisis-alimentaria.html">
 				        	<img src="imagenes/capriless.jpg"> <!-- random image -->
 				        	<div class="caption center-align fondoTextoSlider">
