se realizaron correcciones en articulo sobre contaminacion el agua

--- a/contaminacion-del-agua-en-venezuela.html
+++ b/contaminacion-del-agua-en-venezuela.html
@@ -161,9 +161,9 @@
 				<ul class="collection hoverable">
 
 					<div class="titulo_articulo"><h3 class="titulo_articulo">​Contaminación del agua en Venezuela es tan grande que plantas potabilizadoras no pueden tratarla</h3></div>
-					<img class="responsive-img" src="imagenes/aguaturbia1.jpg">
+					<img class="responsive-img" src="imagenes/aguasucia.jpg">
 					<p class="subtitulo_articulo"><b>Foto: Panorama | 29/09/2016</b></p>
-					<p class="subtitulo_articulo"><b>Lic Daniela Moros | <a href="https://twitter.com/danii_moros?ref_src=twsrc%5Etfw" class="icon-twitter" target="_blank">@Danii_moros</a></b> | <b>Prensa Miranda</b></p>	
+					<p class="subtitulo_articulo"><b>Daniela Moros | <a href="https://twitter.com/danii_moros?ref_src=twsrc%5Etfw" class="icon-twitter" target="_blank">@Danii_moros</a></b></p>	
 					<div class="articulos">			
 						<p>
 							<b>Los Teques, 29/09/2016.</b> Desde cuadros diarreicos hasta dolencias cancerígenas y renales, pueden causar las bacterias y partículas metálicas que podrían estar presentes en las aguas que utiliza la población venezolana para las actividades del día a día. 
