--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 				    <ul class="slides">
 				    	<li>
 				        	<a href="contaminacion-del-agua-en-venezuela.html">
-				        	<img src="imagenes/aguaturbia1.jpg"> <!-- random image -->
+				        	<img src="imagenes/aguasucia.jpg"> <!-- random image -->
 				        	<div class="caption center-align fondoTextoSlider">
 				          		<h3>Contaminación del agua en Venezuela es tan grande que plantas potabilizadoras no pueden tratarla</h3>
 				          		<h5 class="light grey-text text-lighten-3">Mal estado del vital líquido intensifica afecciones de riñón y cáncer</h5>
