--- a/index.html
+++ b/index.html
@@ -152,6 +152,15 @@
 				<div class="slider hoverable">
 				    <ul class="slides">
 				    	<li>
+				        	<a href="el-sacrificio-de-hornear-un-pastel-con-la-escasez.html">
+				        	<img src="imagenes/aguasucia.jpg"> <!-- random image -->
+				        	<div class="caption center-align fondoTextoSlider">
+				          		<h3>​​El sacrificio de hornear un pastel en un país de escasez y precios de rascacielos</h3>
+				          		<h5 class="light grey-text text-lighten-3">Hasta 160 mil cuesta una torta </h5>
+				        	</div>
+				        	</a>
+				      	</li>
+				    	<li>
 				        	<a href="contaminacion-del-agua-en-venezuela.html">
 				        	<img src="imagenes/aguasucia.jpg"> <!-- random image -->
 				        	<div class="caption center-align fondoTextoSlider">
