se corrigio la foto de slider de articulo sobre pasteles

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 				    <ul class="slides">
 				    	<li>
 				        	<a href="el-sacrificio-de-hornear-un-pastel-con-la-escasez.html">
-				        	<img src="imagenes/aguasucia.jpg"> <!-- random image -->
+				        	<img src="imagenes/pasteles2.jpg"> <!-- random image -->
 				        	<div class="caption center-align fondoTextoSlider">
 				          		<h3>​​El sacrificio de hornear un pastel en un país de escasez y precios de rascacielos</h3>
 				          		<h5 class="light grey-text text-lighten-3">Hasta 160 mil cuesta una torta </h5>
