Se diseño la mueva interfaz de la categoria de galeria

--- a/capriles-decreto-crisis-alimentaria.html
+++ b/capriles-decreto-crisis-alimentaria.html
@@ -48,11 +48,11 @@
 							<li><a href="#">Astronomía</a></li>
 						</ul>
 					</li>
-			        <li class="border-nav-6"><a href="#" class= "dropdown-button waves-effect waves-orange" data-activates="dropdown4"><strong>Galería</strong></a>
+			        <li class="border-nav-6"><a href="galeria.html" class= "dropdown-button waves-effect waves-orange" data-activates="dropdown4"><strong>Galería</strong></a>
 			        	<ul id="dropdown4" class="dropdown-content">
-							<li><a href="#">Fotografías</a></li>
-							<li><a href="#">Colecciones</a></li>
-							<li><a href="#">Fotogalerías</a></li>
+							<li><a href="galeria.html">Fotografías</a></li>
+							<li><a href="galeria.html">Colecciones</a></li>
+							<li><a href="galeria.html">Fotogalerías</a></li>
 						</ul>
 					</li>
 			        <li class="border-nav-7"><a href="#" class= "waves-effect waves-orange"><strong>Proyectos</strong></a></li>
@@ -60,7 +60,7 @@
   				<ul class="side-nav" id="mobile-demo">
   					<!-- <img class ="responsive-img" src="imagenes/logo10.png" id = "logo" alt=""> -->
   					<li class="divider"></li>
-			        <li class="border-nav-movil-1"><a href="#" class= "waves-effect waves-orange"><strong>Inicio</strong></a></li>
+			        <li class="border-nav-movil-1"><a href="index.html" class= "waves-effect waves-orange"><strong>Inicio</strong></a></li>
 			        <li class="divider"></li>
 			        <li class="no-padding border-nav-movil-2">
 			        	<ul class="collapsible collapsible-accordion">
@@ -112,12 +112,12 @@
 			        <li class="no-padding border-nav-movil-6">
 			        	<ul class="collapsible collapsible-accordion">
 			        		<li class="bold">
-			        			<a href="#" class= "collapsible-header waves-effect waves-orange"><strong>Galería</strong><i class="icon-arrow-down2 right"></i></a>
+			        			<a href="galeria.html" class= "collapsible-header waves-effect waves-orange"><strong>Galería</strong><i class="icon-arrow-down2 right"></i></a>
 								<div class="collapsible-body" style>
 									<ul>
-										<li><a href="#">Fotografías</a></li>
-										<li><a href="#">Colecciones</a></li>
-										<li><a href="#">Fotogalería</a></li>
+										<li><a href="galeria.html">Fotografías</a></li>
+										<li><a href="galeria.html">Colecciones</a></li>
+										<li><a href="galeria.html">Fotogalería</a></li>
 									</ul>
 								</div>
 			        		</li>
@@ -183,7 +183,7 @@
 							“A través de Satmir tenemos un ingreso entre 2 y 3%, eso irá destinado al programa de alimentación escolar. No podemos dejar que cierre Mipae. Los más vulnerables son nuestros niños, y según una encuesta que hicimos durante julio y agosto, 50% se va a la cama con hambre, es decir, la mitad, y casi un tercio, la única comida que hace al día es en su escuela. Mipae atiende a 102 mil estudiantes mirandinos. Gente que quiera ayudarnos y darnos donaciones, bienvenido sea. Pido a los directores educativos que soliciten ayuda a los comercios”, finalizó​.
 						</p>
 				
-						<img class="responsive-img" src="imagenes/lamina1.jpg">
+						<img class="responsive-img materialboxed" src="imagenes/lamina1.jpg">
 						<img class="responsive-img" src="imagenes/lamina2.jpg">	
 						<img class="responsive-img" src="imagenes/lamina3.jpg">	
 						<img class="responsive-img" src="imagenes/lamina4.jpg">	
