--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       			</a>
       			<a href="index.html" data-activates="mobile-demo" class="button-collapse"><i class="icon-menu"></i></a>
   				<ul class="right hide-on-med-and-down">
-  					<li class="border-nav-1 active"><a href="#" class= "waves-effect waves-orange"><strong>Inicio</strong></a></li>
+  					<li class="border-nav-1 active"><a href="index.html" class= "waves-effect waves-orange"><strong>Inicio</strong></a></li>
 			        <li class="border-nav-2"><a href="#" class= "dropdown-button waves-effect waves-orange" data-activates="dropdown1"><strong>En Contexto</strong></a>
 			        	<ul id="dropdown1" class="dropdown-content">
 							<li><a href="#">Noticias</a></li>
@@ -48,7 +48,7 @@
 							<li><a href="#">Astronomía</a></li>
 						</ul>
 					</li>
-			        <li class="border-nav-6"><a href="#" class= "dropdown-button waves-effect waves-orange" data-activates="dropdown4"><strong>Galería</strong></a>
+			        <li class="border-nav-6"><a href="galeria.html" class= "dropdown-button waves-effect waves-orange" data-activates="dropdown4"><strong>Galería</strong></a>
 			        	<ul id="dropdown4" class="dropdown-content">
 							<li><a href="#">Fotografías</a></li>
 							<li><a href="#">Colecciones</a></li>
@@ -112,7 +112,7 @@
 			        <li class="no-padding border-nav-movil-6">
 			        	<ul class="collapsible collapsible-accordion">
 			        		<li class="bold">
-			        			<a href="#" class= "collapsible-header waves-effect waves-orange"><strong>Galería</strong><i class="icon-arrow-down2 right"></i></a>
+			        			<a href="galeria.html" class= "collapsible-header waves-effect waves-orange"><strong>Galería</strong><i class="icon-arrow-down2 right"></i></a>
 								<div class="collapsible-body" style>
 									<ul>
 										<li><a href="#">Fotografías</a></li>
