--- a/venezolanos-se-alimentan-de-basura.html
+++ b/venezolanos-se-alimentan-de-basura.html
@@ -48,11 +48,11 @@
 							<li><a href="#">Astronomía</a></li>
 						</ul>
 					</li>
-			        <li class="border-nav-6"><a href="#" class= "dropdown-button waves-effect waves-orange" data-activates="dropdown4"><strong>Galería</strong></a>
+			        <li class="border-nav-6"><a href="galeria.html" class= "dropdown-button waves-effect waves-orange" data-activates="dropdown4"><strong>Galería</strong></a>
 			        	<ul id="dropdown4" class="dropdown-content">
-							<li><a href="#">Fotografías</a></li>
-							<li><a href="#">Colecciones</a></li>
-							<li><a href="#">Fotogalerías</a></li>
+							<li><a href="galeria.html">Fotografías</a></li>
+							<li><a href="galeria.html">Colecciones</a></li>
+							<li><a href="galeria.html">Fotogalerías</a></li>
 						</ul>
 					</li>
 			        <li class="border-nav-7"><a href="#" class= "waves-effect waves-orange"><strong>Proyectos</strong></a></li>
@@ -60,7 +60,7 @@
   				<ul class="side-nav" id="mobile-demo">
   					<!-- <img class ="responsive-img" src="imagenes/logo10.png" id = "logo" alt=""> -->
   					<li class="divider"></li>
-			        <li class="border-nav-movil-1"><a href="#" class= "waves-effect waves-orange"><strong>Inicio</strong></a></li>
+			        <li class="border-nav-movil-1"><a href="index.html" class= "waves-effect waves-orange"><strong>Inicio</strong></a></li>
 			        <li class="divider"></li>
 			        <li class="no-padding border-nav-movil-2">
 			        	<ul class="collapsible collapsible-accordion">
@@ -112,12 +112,12 @@
 			        <li class="no-padding border-nav-movil-6">
 			        	<ul class="collapsible collapsible-accordion">
 			        		<li class="bold">
-			        			<a href="#" class= "collapsible-header waves-effect waves-orange"><strong>Galería</strong><i class="icon-arrow-down2 right"></i></a>
+			        			<a href="galeria.html" class= "collapsible-header waves-effect waves-orange"><strong>Galería</strong><i class="icon-arrow-down2 right"></i></a>
 								<div class="collapsible-body" style>
 									<ul>
-										<li><a href="#">Fotografías</a></li>
-										<li><a href="#">Colecciones</a></li>
-										<li><a href="#">Fotogalería</a></li>
+										<li><a href="galeria.html">Fotografías</a></li>
+										<li><a href="galeria.html">Colecciones</a></li>
+										<li><a href="galeria.html">Fotogalería</a></li>
 									</ul>
 								</div>
 			        		</li>
