Se corrigio la url de 3 imagenes en la categoria de galeria

--- a/galeria.html
+++ b/galeria.html
@@ -183,13 +183,13 @@
 					      				<img class="responsive-img materialboxed" src="imagenes/caracas2.jpg" data-caption="Foto: Marcos Collins | Instagram: marcos_collins">	
 					      			</div>
 					      			<div class="contenedor-card-photo">
-					      				<img class="responsive-img materialboxed" src="imagenes/caracas5.jpg" data-caption="Foto: Marcos Collins | Instagram: marcos_collins">	
+					      				<img class="responsive-img materialboxed" src="imagenes/Caracas5.jpg" data-caption="Foto: Marcos Collins | Instagram: marcos_collins">	
 					      			</div>
 					      			<div class="contenedor-card-photo">
-					      				<img class="responsive-img materialboxed" src="imagenes/caracas11.jpg" data-caption="Foto: Marcos Collins | Instagram: marcos_collins">	
+					      				<img class="responsive-img materialboxed" src="imagenes/Caracas11.jpg" data-caption="Foto: Marcos Collins | Instagram: marcos_collins">	
 					      			</div>			      					      			
 					      			<div class="contenedor-card-photo">
-					      				<img class="responsive-img materialboxed" src="imagenes/caracas16.jpg" data-caption="Foto: Marcos Collins | Instagram: marcos_collins">	
+					      				<img class="responsive-img materialboxed" src="imagenes/Caracas16.jpg" data-caption="Foto: Marcos Collins | Instagram: marcos_collins">	
 					      			</div>
 					      			<div class="contenedor-card-photo">
 					      				<img class="responsive-img materialboxed" src="imagenes/Caracas20.jpg" data-caption="Foto: Marcos Collins | Instagram: marcos_collins">	
